# cpp-personal-cloud

./: .gitignore  CMakeLists.txt  README.md  compile.sh
Slint/include/slint/: slint_brush_internal.h  slint_enums.h  slint_enums_internal.h  slint_events_internal.h  slint_image_internal.h  slint_internal.h  slint_interpreter_internal.h  slint_item_tree.h
Slint/lib/cmake/Slint/: SlintConfig.cmake
include/: cloud_dir.h  cloud_file.h  server_response.h  utility_functions.h
include/Slint/include/slint/: slint_builtin_structs_internal.h  slint_color_internal.h  slint_generated_public.h  slint_interpreter_generated_public.h  slint_platform_internal.h  slint_properties_internal.h  slint_qt_internal.h  slint_string_internal.h
include/Slint/licenses/: index.html
src/cli/: client  client.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/cli/cli_headers/: file_explorer_manager.h  server_connection.h  session_manager.h
src/cli/qt_stuff/: ui_palette.xml
src/cli/ui/: action_panel.slint  file_card.slint  file_explorer.slint  file_metadata_section.slint  main_page.slint  main_window.slint  my_button.slint
src/cli/ui/slint_files/: file_card.slint  file_explorer.slint  file_metadata_section.slint  folder_card.slint  login_screen.slint  main_page.slint  main_window.slint  my_button.slint  toast.slint
src/srv/: send_to_server.sh  server  server.cpp
src/srv/sv_headers/: client_worker.h  command_handlers.h  db_manager.h  encryption_manager.h  redundancy_manager.h  user_session.h
